--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.16.0"
   },
@@ -31,6 +32,7 @@
     "@types/leaflet": "1.9.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
+    "@types/react-outside-click-handler": "^1.3.4",
     "@types/react-redux": "7.1.27",
     "@types/testing-library__jest-dom": "5.14.9",
     "@typescript-eslint/eslint-plugin": "6.7.4",
