--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.7",
+    "@types/geojson": "^7946.0.16",
     "axios": "1.5.1",
     "classnames": "2.3.2",
     "history": "5.3.0",
     "http-status-codes": "2.3.0",
-    "leaflet": "1.7.1",
+    "leaflet": "^1.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.16.0"
+    "react-router-dom": "6.16.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
@@ -29,7 +31,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
     "@types/faker": "5.5.9",
-    "@types/leaflet": "1.9.3",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/react-outside-click-handler": "^1.3.4",
