--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.16.0",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
